test html string

--- a/ServerFlask/static/forecast.html
+++ b/ServerFlask/static/forecast.html
@@ -101,7 +101,7 @@
 					function drawBasic() {
 
 						  var data = new google.visualization.DataTable();
-						  data.addColumn('number', 'Time');
+						  data.addColumn('string', 'Time');
 						  data.addColumn('number', 'Rain Forecast');
 						  data.addColumn('number', 'Rain Real');
 						  datav2 = []
