--- a/ServerFlask/static/rain.html
+++ b/ServerFlask/static/rain.html
@@ -107,7 +107,7 @@
 					function drawBasic() {
 
 						  var data = new google.visualization.DataTable();
-						  data.addColumn('number', 'Time');
+						  data.addColumn('string', 'Time');
 						  data.addColumn('number', 'Rain');
 						  datav2 = []
 						  for(i=0; i<datav.length;i++)
