all html modified to string

--- a/ServerFlask/static/pressure.html
+++ b/ServerFlask/static/pressure.html
@@ -101,7 +101,7 @@
 					function drawBasic() {
 
 						  var data = new google.visualization.DataTable();
-						  data.addColumn('number', 'Time');
+						  data.addColumn('string', 'Time');
 						  data.addColumn('number', 'Pressure');
 						  datav2 = []
 						  for(i=0; i<datav.length;i++)
