--- a/ServerFlask/static/forecast.html
+++ b/ServerFlask/static/forecast.html
@@ -114,7 +114,8 @@
 							  title: 'Time'
 							},
 							vAxis: {
-							  title: 'Rain'
+							  title: 'Rain',
+							  textPosition: 'none'
 							},
 							// legend:'none'
 						  };
