--- a/ServerFlask/static/pressure.html
+++ b/ServerFlask/static/pressure.html
@@ -50,6 +50,24 @@
 					</a>
 				</div>
 
+				<!-- Prev Button -->
+				<div style="position: absolute; top: 400px; left: 10px;">
+					<a href="wind.html">
+						<button type="submit" class="button small" style="font-family: monospace; font-size: 16px; color: #1B1154; background-color: #9adbef;">
+							Wind
+						</button>
+					</a>
+				</div>
+
+				<!-- Next Button -->
+				<div style="position: absolute; top: 400px; right: 10px;">
+					<a href="forecast.html">
+						<button type="submit" class="button small" style="font-family: monospace; font-size: 16px; color: #1B1154; background-color: #9adbef;">
+							Forecast
+						</button>
+					</a>
+				</div>
+
 				<!-- Logout Button -->
                 <div style="position: absolute; top: 10px; right: 10px;">
                     <form method="post" action="/logout">
