--- a/ServerFlask/static/menu.html
+++ b/ServerFlask/static/menu.html
@@ -46,11 +46,10 @@
 
 								<!-- Grafico pioggia -->
 								<section>
-									<a href="rain.html">
-										<i class="fa-solid fa-cloud-rain" style = "font-size: 50px"></i></a>
-									<h3 style = "font-family: Avenir; font-size: 23px"><a href="rain.html">Rain</a></h3>
+									<a href="rain.html" onclick="sendValueAndRedirect(event, 'rain.html')">
+										<i class="fa-solid fa-cloud-rain" style="font-size: 50px"></i></a>
+									<h3 style="font-family: Avenir; font-size: 23px"><a href="rain.html" onclick="sendValueAndRedirect(event, 'rain.html')">Rain</a></h3>
 								</section>
-
 								<!-- Grafico umidità -->
 								<section>
 									<a href="humidity.html">
