--- a/ServerFlask/static/menu.html
+++ b/ServerFlask/static/menu.html
@@ -50,46 +50,47 @@
 										<i class="fa-solid fa-cloud-rain" style="font-size: 50px"></i></a>
 									<h3 style="font-family: Avenir; font-size: 23px"><a href="rain.html" onclick="sendValueAndRedirect(event, 'rain.html')">Rain</a></h3>
 								</section>
+								
 								<!-- Grafico umidità -->
 								<section>
-									<a href="humidity.html">
-										<i class="fa-solid fa-droplet" style = "font-size: 50px"></i></a>
-									<h3 style = "font-family: Avenir; font-size: 23px"><a href="humidity.html">Humidity</a></h3>
+									<a href="humidity.html" onclick="sendValueAndRedirect(event, 'humidity.html')">
+										<i class="fa-solid fa-droplet" style="font-size: 50px"></i></a>
+									<h3 style="font-family: Avenir; font-size: 23px"><a href="humidity.html" onclick="sendValueAndRedirect(event, 'humidity.html')">Humidity</a></h3>
 								</section>
 
 								<!-- Grafico illuminazione -->
 								<section>
-									<a href="light.html">
-										<i class="fa-solid fa-sun" style = "font-size: 50px"></i></a>
-									<h3 style = "font-family: Avenir; font-size: 23px"><a href="light.html">Light</a></h3>
+									<a href="light.html" onclick="sendValueAndRedirect(event, 'light.html')">
+										<i class="fa-solid fa-sun" style="font-size: 50px"></i></a>
+									<h3 style="font-family: Avenir; font-size: 23px"><a href="light.html" onclick="sendValueAndRedirect(event, 'light.html')">Light</a></h3>
 								</section>
 
 								<!-- Grafico temperatura -->
 								<section>
-									<a href="temperature.html">
-										<i class="fa-solid fa-temperature-three-quarters" style = "font-size: 50px"></i></a>
-									<h3 style = "font-family: Avenir; font-size: 23px"><a href="temperature.html">Temperature</a></h3>
+									<a href="temperature.html" onclick="sendValueAndRedirect(event, 'temperature.html')">
+										<i class="fa-solid fa-temperature-three-quarters" style="font-size: 50px"></i></a>
+									<h3 style="font-family: Avenir; font-size: 23px"><a href="temperature.html" onclick="sendValueAndRedirect(event, 'temperature.html')">Temperature</a></h3>
 								</section>
 
 								<!-- Grafico vento -->
 								<section>
-									<a href="wind.html">
-										<i class="fa-solid fa-wind" style = "font-size: 50px"></i></a>
-									<h3 style = "font-family: Avenir; font-size: 23px"><a href="wind.html">Wind</a></h3>
+									<a href="wind.html" onclick="sendValueAndRedirect(event, 'wind.html')">
+										<i class="fa-solid fa-wind" style="font-size: 50px"></i></a>
+									<h3 style="font-family: Avenir; font-size: 23px"><a href="wind.html" onclick="sendValueAndRedirect(event, 'wind.html')">Wind</a></h3>
 								</section>
 
 								<!-- Grafico pressione atmosferica -->
 								<section>
-									<a href="pressure.html">
-										<i class="fa-solid fa-clock" style = "font-size: 50px" ></i>
-									<h3 style = "font-family: Avenir; font-size: 23px"><a href="pressure.html">Pressure</a></h3>
+									<a href="pressure.html" onclick="sendValueAndRedirect(event, 'pressure.html')">
+										<i class="fa-solid fa-clock" style="font-size: 50px"></i>
+									<h3 style="font-family: Avenir; font-size: 23px"><a href="pressure.html" onclick="sendValueAndRedirect(event, 'pressure.html')">Pressure</a></h3>
 								</section>
 
 								<!-- Grafico forecast -->
 								<section>
-									<a href="forecast.html">
-										<i class="fa-solid fa-chart-line" style = "font-size: 50px" ></i>
-									<h3 style = "font-family: Avenir; font-size: 23px"><a href="forecast.html">Forecast</a></h3>
+									<a href="forecast.html" onclick="sendValueAndRedirect(event, 'forecast.html')">
+										<i class="fa-solid fa-chart-line" style="font-size: 50px"></i>
+									<h3 style="font-family: Avenir; font-size: 23px"><a href="forecast.html" onclick="sendValueAndRedirect(event, 'forecast.html')">Forecast</a></h3>
 								</section>
 
 								<section>
