--- a/ServerFlask/static/menu.html
+++ b/ServerFlask/static/menu.html
@@ -38,7 +38,7 @@
 							<!-- Casella a discesa -->
 							<label for="stationID">Select station:</label>
 							<select name="stationID" id="stationID">
-								<option value="Raspberry">Raspberry</option>
+								<option value="RASP1">RASP1</option>
 								<option value="PC1">PC1</option>
 							</select>
 
@@ -50,7 +50,7 @@
 										<i class="fa-solid fa-cloud-rain" style="font-size: 50px"></i></a>
 									<h3 style="font-family: Avenir; font-size: 23px"><a href="rain.html" onclick="sendValueAndRedirect(event, 'rain.html')">Rain</a></h3>
 								</section>
-								
+
 								<!-- Grafico umidità -->
 								<section>
 									<a href="humidity.html" onclick="sendValueAndRedirect(event, 'humidity.html')">
