--- a/ServerFlask/static/menu.html
+++ b/ServerFlask/static/menu.html
@@ -38,7 +38,7 @@
 							<!-- Casella a discesa -->
 							<label for="stationID">Select station:</label>
 							<select name="stationID" id="stationID">
-								<option value="RASP1">Rasp1</option>
+								<option value="Rasp1">RASP1</option>
 								<option value="PC1">PC1</option>
 							</select>
 
