--- a/ServerFlask/static/menu.html
+++ b/ServerFlask/static/menu.html
@@ -40,6 +40,8 @@
 							<select name="stationID" id="stationID">
 								<option value="Rasp1">RASP1</option>
 								<option value="PC1">PC1</option>
+								<option value="PC2">PC2</option>
+								<option value="PC3">PC3</option>
 							</select>
 
 							<div class="items style1 medium onscroll-fade-in">
