--- a/ServerFlask/static/menu.html
+++ b/ServerFlask/static/menu.html
@@ -15,6 +15,19 @@
             background-size: cover; /* Copre l'intero sfondo */
             background-position: center; /* Posizione centrata */
         }
+
+		/* Stile per la casella a discesa stationID */
+		#stationID {
+			width: 200px; /* Larghezza della casella a discesa */
+			margin: 0 auto; /* Per centrare la casella a discesa orizzontalmente */
+			display: block; /* Per far sì che abbia una larghezza definita */
+			/* background-color:#F6F8F8; */
+			color:black;
+			font-weight: bold;
+			border: 3px solid black;
+		}
+
+
     </style>
 	<body class="is-preload">
 
