--- a/ServerFlask/static/pressure.html
+++ b/ServerFlask/static/pressure.html
@@ -135,7 +135,7 @@
 							  title: 'Time'
 							},
 							vAxis: {
-							  title: 'Rain [mm]'
+							  title: 'Pressure [mm]'
 							},
 							legend:'none',
 							title: stationID,
