--- a/ServerFlask/static/wind.html
+++ b/ServerFlask/static/wind.html
@@ -135,7 +135,7 @@
 							  title: 'Time'
 							},
 							vAxis: {
-							  title: 'Rain [mm]'
+							  title: 'Wind [m/s]'
 							},
 							legend:'none',
 							title: stationID,
